--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "nouislider": "^14.0.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-data-tables": "^3.4.4",
     "vue-infinite-loading": "^2.4.4",
     "vue-lazyload": "^1.3.2",
     "vue-router": "^3.0.3",
